--- a/vocola2/language-configuration.json
+++ b/vocola2/language-configuration.json
@@ -1,7 +1,7 @@
 {
     "comments": {
         // symbol used for single line comment. Remove this entry if your language does not support line comments
-        "lineComment": "//",
+        "lineComment": "#",
         // symbols used for start and end a block comment. Remove this entry if your language does not support block comments
         "blockComment": [ "/*", "*/" ]
     },
@@ -9,7 +9,8 @@
     "brackets": [
         ["{", "}"],
         ["[", "]"],
-        ["(", ")"]
+        ["(", ")"],
+        ["<", ">"]
     ],
     // symbols that are auto closed when typing
     "autoClosingPairs": [
@@ -18,6 +19,7 @@
         ["(", ")"],
         ["\"", "\""],
         ["'", "'"]
+        ["<", ">"]
     ],
     // symbols that can be used to surround a selection
     "surroundingPairs": [
